--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,29 +15,28 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-apple-darwin
-            os: macos-latest
-          - target: aarch64-apple-darwin
-            os: macos-latest
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
-            RUSTFLAGS: -C target-feature=+crt-static
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
+          # - target: x86_64-apple-darwin
+          #   os: macos-latest
+          # - target: aarch64-apple-darwin
+          #   os: macos-latest
+          # - target: x86_64-pc-windows-msvc
+          #   os: windows-latest
+          #   RUSTFLAGS: -C target-feature=+crt-static
+          # - target: x86_64-pc-windows-gnu
+          #   os: windows-latest
           # - target: arm64ec-pc-windows-msvc
           #   os: windows-latest
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
+          # - target: aarch64-unknown-linux-gnu
+          #   os: ubuntu-latest
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: aarch64-linux-android
-            os: ubuntu-latest
+          # - target: x86_64-unknown-linux-gnu
+          #   os: ubuntu-latest
+          # - target: aarch64-linux-android
+          #   os: ubuntu-latest
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.bin }}-${{ matrix.target }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -45,7 +44,9 @@ jobs:
       - name: run cross-build
         uses: ahaoboy/cross-build@v1
         with:
+          bin: "hx"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           target: ${{ matrix.target }}
           tag: nightly
           allowUpdates: true
+          RUSTFLAGS: "-C target-feature=-crt-static"
